refactor some get/setSummary tests; fix bug in SummaryWrapper
SummaryWrapper.list() would return null.